[package]
name = "nvme-ata-security"
description = "Linux userspace tool to configure ATA security on NVMe drives"
version = "0.1.0"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "GPL-2.0+"
repository = "https://github.com/jethrogb/nvme-ata-security/tree/master/user"

[dependencies]
nix = "0.11.0"              # MIT
byteorder = "1.2.3"         # Unlicense/MIT
bitflags = "1"              # MIT/Apache-2.0
docopt = "1"                # Unlicense/MIT
serde = "1"                 # MIT/Apache-2.0
serde_derive = "1"          # MIT/Apache-2.0
libc = "0.2.12"             # MIT/Apache-2.0
rpassword = "2"             # Apache 2.0
sha2 = "0.7.1"              # MIT/Apache-2.0
